--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dynamic = ["version"]
 dependencies = [
 	"muGrid==0.95.0",
 	"matplotlib==3.10.6",
-	"mpi4py==4.1.0"
+	"mpi4py==4.1.0",
+	"gpjax==0.11.2",
+	"netCDF4==1.7.2"
 ]
 
 [project.urls]
