--- a/examples/journal.yaml
+++ b/examples/journal.yaml
@@ -1,35 +1,34 @@
 options:
     output: data/journal
-    write_freq: 10
+    write_freq: 100
     use_tstamp: True
 grid:
     dx: 1.e-5
     dy: 1.
     Nx: 100
     Ny: 1
-    xE: ['D', 'N', 'N']
-    xW: ['D', 'N', 'N']
+    xE: ['P', 'P', 'P']
+    xW: ['P', 'P', 'P']
     yS: ['P', 'P', 'P']
     yN: ['P', 'P', 'P']
-    xE_D: 877.7007
-    xW_D: 877.7007
 geometry:
     type: journal
     CR: 1.e-2
     eps: 0.7
     U: 0.1
     V: 0.
+    flip: False
 numerics:
     CFL: 0.5
-    adaptive: 0
-    tol: 1e-9
+    adaptive: 1
+    tol: 1e-8
     dt: 1e-10
-    max_it: 200
+    max_it: 10_000
 properties:
     shear: 0.0794
     bulk: 0.
     EOS: DH
-    P0: 101325
+    P0: 101325.
     rho0: 877.7007
     T0: 323.15
     C1: 3.5e10
