--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ test = ['pytest',
 [project.scripts]
 gpf_plot_height="GaPFlow.cli:plot_height.main"
 gpf_plot_history="GaPFlow.cli:plot_history.main"
+gpf_plot_frame="GaPFlow.cli:plot_frame.main"
+gpf_plot_frames="GaPFlow.cli:plot_frames.main"
 
 [project.urls]
 Source = "https://github.com/hannes-holey/gapflow"
