--- a/examples/config/journal_gp.yaml
+++ b/examples/config/journal_gp.yaml
@@ -36,13 +36,20 @@ properties:
     C2: 1.23
 gp:
     db_init_size: 5
+    db_init_samp: rand
+    db_init_width: 1.e-6
+    # db_path: data/train
     press:
         fix_noise: True
+        atol: 1.
         rtol: 0.1
-        obs_stddev: 10.
+        obs_stddev: 100.
         max_steps: 5
     shear:
         fix_noise: True
+        atol: 1.
         rtol: 0.1
         obs_stddev: 1.
         max_steps: 5
+md:
+    system: lj
