--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,9 @@ dependencies = [
 	"tinygp==0.3.0",
 	"netCDF4==1.7.2",
 	"pandas==2.3.2",
-	"jaxopt==0.8.5"
+	"jaxopt==0.8.5",
+	"dtool==3.27.0",
+	"dtool-lookup-api==0.10.2"
 ]
 
 [project.optional-dependencies]
