--- a/examples/config/journal_gp.yaml
+++ b/examples/config/journal_gp.yaml
@@ -34,6 +34,10 @@ properties:
     T0: 323.15
     C1: 3.5e10
     C2: 1.23
+    thinning:
+        type: 'PL'
+    piezo:
+        type: 'Barus'
 gp:
     press:
         fix_noise: True
