MAINT: animation script for 2d systems

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ gpf_plot_height="GaPFlow.cli:plot_height.main"
 gpf_plot_history="GaPFlow.cli:plot_history.main"
 gpf_plot_frame="GaPFlow.cli:plot_frame.main"
 gpf_plot_frames="GaPFlow.cli:plot_frames.main"
-gpf_animate="GaPFlow.cli:animate.main"
+gpf_animate1d="GaPFlow.cli:animate1d.main"
+gpf_animate2d="GaPFlow.cli:animate2d.main"
 
 [project.urls]
 Source = "https://github.com/hannes-holey/gapflow"
