--- a/examples/config/cosine_mol.yaml
+++ b/examples/config/cosine_mol.yaml
@@ -1,36 +1,36 @@
 options:
-    output: data/parabolic_lj_md
+    output: data/cosine_mol
     write_freq: 100
     use_tstamp: True
 grid:
-    Lx: 1470.
+    Lx: 1918.
     Ly: 1.
-    Nx: 200
+    Nx: 100
     Ny: 1
     xE: ['D', 'N', 'N']
     xW: ['D', 'N', 'N']
     yS: ['P', 'P', 'P']
     yN: ['P', 'P', 'P']
-    xE_D: 0.8
-    xW_D: 0.8
+    xE_D: 0.51
+    xW_D: 0.51
 geometry:
-    type: parabolic
-    hmin: 12.
+    type: journal
+    hmin: 30.
     hmax: 60.
-    U: 0.12
+    U: 20.e-5
     V: 0.
 numerics:
     CFL: 0.5
     adaptive: 1
-    tol: 1e-8
-    dt: 0.05
-    max_it: 5_000
+    tol: 1e-7
+    dt: 1.
+    maxIt: 10_000
 properties:
     shear: 2.15
     bulk: 0.
-    EOS: DH
+    EOS: BWR
     T: 1.0
-    rho0: 0.8
+    rho0: 0.51
 gp:
     press:
         fix_noise: True
@@ -46,16 +46,22 @@ gp:
         max_steps: 10
 db:
     dtool: True
-    dtool_path: data/train_lj  # defaults to options['output']/train   
+    dtool_path: data/train_mol
     init_size: 5
     init_samp: rand
-    init_width: 0.01 # default (for density)
 md:
-    system: lj
-    ncpu: 6
-    infile: lmp/lj/in.lmp
-    wallfile: lmp/lj/wall.lmp
-    vWall: 0.12
-    cutoff: 2.5
-    temp: 1.0
-    tsample: 100000
+    system: mol
+    ncpu: 6 
+    wall: eam
+    molecule: hexadecane
+    fftemplate: lmp/mol/moltemplate_files/trappe1998.lt
+    topo: lmp/mol/moltemplate_files/hexadecane.lt
+    staticFiles: lmp/mol/static
+    size: 3
+    vWall: 20.  # in m/s
+    temperature: 400.
+    Ninit: 25_000
+    Nsteady: 10_000
+    Nsample: 10_000
+
+
