MAINT: refactor database/MD runs, allows custom MD subclasses

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,4 +54,6 @@ include = ["GaPFlow/resources/*"]
 [tool.pytest.ini_options]
 addopts = "-v"
 testpaths = ["tests"]
+filterwarnings = "ignore::DeprecationWarning"
+
 
