--- a/examples/config/journal1D_gp.yaml
+++ b/examples/config/journal1D_gp.yaml
@@ -51,5 +51,5 @@ db:
     dtool: True
     # dtool_path: ... # defaults to options['output']/train   
     init_size: 5
-    init_samp: rand
+    init_method: lhc
     init_width: 1.e-6
