--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,4 +56,9 @@ addopts = "-v"
 testpaths = ["tests"]
 filterwarnings = "ignore::DeprecationWarning"
 
+[tool.coverage.run]
+omit = ["GaPFlow/*/*"]
+command_line = "-m pytest"
+
+
 
