--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,8 @@ testpaths = ["tests"]
 filterwarnings = "ignore::DeprecationWarning"
 
 [tool.coverage.run]
-omit = ["GaPFlow/*/*"]
+source = ["GaPFlow"]
+omit = ["GaPFlow/viz/*"]
 command_line = "-m pytest"
 
 
