--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ tag = False
 commit = True
 verbose = True
 
-[bumpversion:file:hans/__init__.py]
+[bumpversion:file:GaPFlow/__init__.py]
 
 [flake8]
 max_line_length = 120
