--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
     # "License :: OSI Approved :: MIT License"
 ]
 
-requires-python = ">=3.10, <3.14"
+requires-python = ">3.10"
 dynamic = ["version"]
 dependencies = [
 	"muGrid>=0.95.0",
