--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ ruamel.yaml
 ase
 mpi4py
 moltemplate
+git+https://github.com/ContactEngineering/ContactMechanics.git@SemiPeriodicFFTElasticHalfSpace
