ENH: make active learning optional, avoid redundant variance computation

--- a/examples/config/parabolic_1d_lj_mock.yaml
+++ b/examples/config/parabolic_1d_lj_mock.yaml
@@ -38,12 +38,14 @@ gp:
         rtol: 0.
         obs_stddev: 2.e-2
         max_steps: 10
+        active_learning: True
     shear:
         fix_noise: True
         atol: 1.5
         rtol: 0.
         obs_stddev: 4.e-3
         max_steps: 10
+        active_learning: True
 db:
     # dtool_path: data/train  # defaults to options['output']/train   
     init_size: 5
