ENH: new ContactMechanics reference

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ ruamel.yaml
 ase
 mpi4py
 moltemplate
-git+https://github.com/ContactEngineering/ContactMechanics.git@SemiPeriodicFFTElasticHalfSpace
+git+https://github.com/ContactEngineering/ContactMechanics.git@c318fe2#egg=ContactMechanics
