--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -25,7 +25,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y openmpi-bin libopenmpi-dev
-          sudo pip install .[doc]
+          sudo pip install --upgrade --ignore-installed .[doc]
 
       # Standard drop-in approach that should work for most people.
       - name: build_doc
