--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,15 +30,13 @@ jobs:
 
     - name: Install build requirements
       run: |
-        sudo apt-get install git
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools setuptools_scm coverage build pytest
+        sudo apt-get install git python3-pip
+        python3 -m pip install --upgrade setuptools setuptools_scm coverage build pytest
 
     - name: Install GaPFlow
       run: |
-        python -m pip install mpi4py
         pip install -v --force-reinstall --no-cache --no-binary muGrid muGrid
-        pip install --upgrade-strategy only-if-needed .[test]
+        pip install .[test]
 
     - name: Test with pytest
       run: |
