--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,15 +28,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install build requirements
-      run: |
-        sudo apt-get install git python3-pip
-        python3 -m pip install --upgrade setuptools setuptools_scm coverage build pytest
-
     - name: Install GaPFlow
       run: |
-        pip install -v --force-reinstall --no-cache --no-binary muGrid muGrid
-        pip install .[test]
+        python3 -m pip install --upgrade pip
+        python3 -m pip install -v --force-reinstall --no-cache --no-binary muGrid muGrid
+        python3 -m pip install .[test]
 
     - name: Test with pytest
       run: |
@@ -51,33 +47,34 @@ jobs:
         gist_id: fac7fa61e1899b1e74b3bab598fe6513
         file_path: badge.svg
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
-  #   needs: test
-  #   environment:
-  #     name: release
-  #   permissions:
-  #     # IMPORTANT: this permission is mandatory for trusted publishing
-  #     id-token: write
+  deploy:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+    needs: test
+    environment:
+      name: release
+    permissions:
+      # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
 
-  #   steps:
-  #     - name: Checkout source
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-  #     - name: Set up Python
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
 
-  #     - name: Install dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install setuptools wheel twine build
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install wheel twine build
 
-  #     - name: Package dist
-  #       run: |
-  #         python3 -m build
+      - name: Package dist
+        run:
+          # Only serial, no LAMMPS
+          python3 -m build
 
-  #     - name: Publish package on PyPI
-  #       uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Publish package on PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
