--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,10 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         python3 -m pip install -v --force-reinstall --no-cache --no-binary muGrid muGrid
+        
+        python3 -m pip install DiscoverVersion      
+        python3 -c "from DiscoverVersion.Discovery import get_version; print(get_version('GaPFlow', 'GaPFlow.__init__.py'))"
+
         python3 -m pip install .[test]
 
     - name: Test with pytest
