--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,7 @@ jobs:
     - name: Install GaPFlow
       run: |
         python3 -m pip install --upgrade pip
+        python3 -m pip install --upgrade pytest coverage
         python3 -m pip install -v --force-reinstall --no-cache --no-binary muGrid muGrid
         python3 -m pip install .[test]
 
