--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,7 +34,7 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         python3 -m pip cache purge
-        python3 -m pip install --upgrade pytest coverage setuptools wheels
+        python3 -m pip install --upgrade pytest coverage setuptools wheel
         python3 -m pip install -v --force-reinstall --no-cache --no-binary muGrid muGrid
         python3 -m pip install .[test]
 
