--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,8 +40,9 @@ jobs:
 
     - name: Test with pytest
       run: |
-        coverage run
-        bash maintenance/update_coverage_badge.sh
+        pytest
+        # coverage run
+        # bash maintenance/update_coverage_badge.sh
 
     - name: Upload coverage badge
       if: matrix.python-version == '3.12' && github.ref == 'refs/heads/main'
