--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,17 +32,23 @@ jobs:
 
     - name: Install GaPFlow
       run: |
-        python3 -m pip install --upgrade pip coverage pytest
+        python3 -m pip install --upgrade pip
         python3 -m pip install -v --force-reinstall --no-cache --no-binary muGrid muGrid
-        python3 -m pip install .
+        python3 -m pip install .[test]
 
-    - name: Test with pytest
+    - name: Test with pytest (<3.13)
+      if: matrix.python-version != '3.13'
+      run:
+        pytest
+    
+    - name: Test with pytest & coverage (3.13)
+      if: matrix.python-version == '3.13'
       run: |
-        coverage run --timid -m pytest
+        coverage run -m pytest
         bash maintenance/update_coverage_badge.sh
 
     - name: Upload coverage badge
-      if: matrix.python-version == '3.12' && github.ref == 'refs/heads/main'
+      if: matrix.python-version == '3.13' && github.ref == 'refs/heads/main'
       uses: exuanbo/actions-deploy-gist@v1
       with:
         token: ${{ secrets.GIST_SECRET }}
