--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     needs: test
     environment:
-      name: release
+      name: ci
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
