--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
 	"ase", 
 	"mpi4py",
 	"moltemplate",
-	"ContactMechanics @ git+https://github.com/ContactEngineering/ContactMechanics.git@c318fe2",
+	"ContactMechanics>=1.7.0",
 	"IPython"]
 
 [project.optional-dependencies]
