--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
 
       - name: install_package
         run: |
@@ -27,7 +29,6 @@ jobs:
           sudo apt-get install -y openmpi-bin libopenmpi-dev ffmpeg
           sudo pip install --upgrade --ignore-installed .[doc]
 
-      # Standard drop-in approach that should work for most people.
       - name: build_doc
         run: |
           cd doc
