--- a/.github/workflows/wheels.yaml
+++ b/.github/workflows/wheels.yaml
@@ -18,7 +18,7 @@ jobs:
         os: 
           - ubuntu-latest
           - macos-14
-          # - windows-2022
+          - windows-2022
     steps:
       - uses: actions/checkout@v5
         with:
