--- a/examples/config/journal_1d_dowson-higginson_gp.yaml
+++ b/examples/config/journal_1d_dowson-higginson_gp.yaml
@@ -37,15 +37,13 @@ properties:
 gp:
     press:
         fix_noise: True
-        atol: 1.
-        rtol: 0.1
-        obs_stddev: 100.
+        atol: 10.
+        obs_stddev: 10000.
         max_steps: 5
     shear:
         fix_noise: True
-        atol: 1.
-        rtol: 0.1
-        obs_stddev: 1.
+        atol: 10.
+        obs_stddev: 100.
         max_steps: 5
 db:
     dtool: True
@@ -53,3 +51,5 @@ db:
     init_size: 5
     init_method: lhc
     init_width: 1.e-6
+    normalizer_X: standard
+    normalizer_Y: standard
