--- a/tests/configs/couette_2d_wall_velocity.yaml
+++ b/tests/configs/couette_2d_wall_velocity.yaml
@@ -46,29 +46,11 @@ fem_solver:
     pressure_stab_alpha: 0.1
     momentum_stab_alpha: 1.0
     max_iter: 20
-    equations:
-        energy: False
-        term_list:
-            # Mass equation
-            - R11x
-            - R11y
-            - R1T
-            - R1Stabx
-            - R1Staby
-            # Momentum - pressure gradient
-            - R21x
-            - R21y
-            # Momentum - in-plane viscous diffusion (KEY for Couette)
-            - R23xy
-            - R23yx
-            # Momentum - time derivative and stabilization
-            - R2Tx
-            - R2Ty
-            - R2Stabx
-            - R2Staby
-            # NOTE: No body force (R25x) - Couette is shear-driven
+    physics:
+        gap_shear: False
+        plane_shear: True
 
 options:
     output: /tmp/couette_2d_test
     write_freq: 100
-    silent: True
+    save_output: False
